welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: not found: value i
	T(j) = T(i+1)
                 ^