welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var T = new Array[Color](getMondeHauteur());
for (i <- 0 to T.length-1) {
  T(i) = getCouleurSol()
  avance()
}
gauche();avance();droite();
for (j <- 0 to T.length-1) {
	T(j) = T(i+1)
	baisseBrosse();leveBrosse();avance()
}
}
